@@ -11,7 +11,9 @@
                  ; Ring defaults - for query params etc
                  [ring/ring-defaults "0.3.2"]
                  ; Clojure data.JSON library
-                 [org.clojure/data.json "0.2.6"]]
+                 [org.clojure/data.json "0.2.6"]
+                 [com.clojure-goes-fast/clj-memory-meter "0.1.3"]]
+  :jvm-opts ["-Djdk.attach.allowAttachSelf"]
   :main ^:skip-aot pingergen.core
   :target-path "target/%s"
   :profiles {:uberjar {:aot :all}})
